[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scholarSparkObservability"
version = "0.1.0"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
description = "OpenTelemetry setup and utilities for Scholar Spark"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
]

[project.urls]
"Homepage" = "https://github.com/Polyhistor/scholarSparkObservability"
"Bug Tracker" = "https://github.com/Polyhistor/scholarSparkObservability/issues"