[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Pouya Ataei"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scholar-spark-observability = {version = "0.3.0", source = "test-pypi"}


[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
